# vhennus_server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  Jenkinsfile.groovy  README.md  deploy.sh  dev_deploy.sh.example  log4rs.yaml  readme.md
.github/workflows/: cron.yml  event.yml  ref_email.yml
migrations/: 20250228043928_create_users.sql  20250228045222_create_friends.sql  20250228045353_create_friend_requests.sql  20250228045617_create_chats.sql  20250228045715_create_chat_pairs.sql  20250228045808_create_system_data.sql  20250228045854_create_post.sql  20250228045945_create_likes.sql  20250228050018_create_comments.sql  20250328054829_is_confirmed_users.sql  20250430231909_ngn_system_data.sql  20250516093834_ref_clicks.sql  20250517103046_ref_amount_system_data.sql  20250526011135_groups.sql  20250526011142_rooms.sql  20250526110936_upd_groups_category.sql  20250704214721_lottery.sql
migrations/2025-02-17-234513_create_users/: up.sql
migrations/2025-02-20-011940_create_friends/: up.sql
migrations/2025-02-26-010608_create_system_data/: up.sql
migrations_old/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations_old/2025-02-17-234513_create_users/: up.sql
migrations_old/2025-02-20-005519_create_profile/: up.sql
migrations_old/2025-02-20-172354_create_friend_request/: down.sql  up.sql
migrations_old/2025-02-24-000055_create_chat/: up.sql
migrations_old/2025-02-24-000752_create_chatpair/: down.sql  up.sql
migrations_old/2025-02-26-010608_create_system_data/: down.sql
migrations_old/2025-02-26-095219_create_post/: up.sql
migrations_old/2025-02-26-095528_create_likes/: up.sql
migrations_old/2025-02-26-095532_create_comments/: up.sql
old_mig/: 20250228044518_create_profiles.sql  20250228045222_create_friends.sql  20250228045353_create_friend_requests.sql  20250228045808_create_system_data.sql  20250228050018_create_comments.sql  20250326020437_add_link_system_data.sql  20250408120324_wallets_profile.sql  20250507200323_earnings_profile.sql  20250514133345_system_data_price_per_minute.sql  20250516093834_ref_clicks.sql
src/: main.rs  schema.rs
src/controllers/: buy_order_controller.rs  chats_controller.rs  download_controller.rs  group_controller.rs  jobs_controller.rs  mod.rs  order_message_controller.rs  payment_method_controller.rs  player_controller.rs  post_controller.rs  power_ups_controller.rs  profile_controller.rs  ref_link_controller.rs  sample_controller.rs  sell_order_controller.rs  service_errors.rs  system_controller.rs  trivia_game_controller.rs  user_controller.rs  wallet_controller.rs
src/database/: db.rs  mod.rs
src/groups/: controller.rs  mod.rs  models.rs  repository.rs  service.rs
src/lottery/: mod.rs  models.rs  repository.rs
src/middlewares/: auth_middleware.rs  mod.rs  nurse_auth_middleware.rs
src/models/: account_details.rs  app_error.rs  buy_order.rs  chat.rs  chat_pair.rs  circle.rs  comment.rs  diagnosis.rs  fried_request.rs  helper.rs  likes.rs  live_rate_resp.rs  message.rs  mod.rs  payment_method.rs  post.rs  power_up.rs  price.rs  profile.rs  ref_click.rs  request_models.rs  response.rs  room_message.rs  run_info.rs  sell_order.rs  system.rs  test_data.rs  test_record.rs  trade_contact.rs  trivia_game.rs  trivia_question.rs  user.rs  wallet.rs
src/req_models/: create_payment_method_req.rs  create_user_req.rs  (+4 more)
templates/: event.hbs  ref_reminder.hbs  reset_password_email.hbs  signup_email_template.hbs
(+44 files in other folders)
