[package]
name = "vhennus_server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.9.0"
actix-web-validator = "6.0.0"
actix-ws = "0.3.0"
bcrypt = "0.16.0"
bigdecimal = {version="0.4.5", features= ["serde"]}
chrono = "0.4.23"
dashmap = "6.1.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.25"
futures-util = "0.3.26"
get_if_addrs = "0.5.3"
handlebars = "4.3.6"
jsonwebtoken = "8.2.0"
lettre = { version = "0.11", default-features = false, features = ["native-tls"] }
log = "0.4.22"
log4rs = "1.3.0"
mongodb = "3.0.1"
r2d2 = "0.8.10"
r2d2-mongodb = "*"
rand = "0.8.5"
regex = "1.7.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
strum = "0.26.3"
strum_macros = "0.26"
thiserror = "1.0.63"
uuid = "1.10.0"
validator = {version ="0.18.1", features = ["derive"] }
google-authenticator = "0.4.2"
gcp_auth = "0.12.3"
awc = { version = "3.5.1", features = ["rustls"] }
